fix: Align navbar consistently across all pages

--- a/css/style.css
+++ b/css/style.css
@@ -16,10 +16,10 @@ body {
   padding: 4.8rem 0 7rem;
   border-radius: 10px;
   margin-top: 30px;
-  margin-bottom: 3rem;
   max-width: 130rem;
   margin: 0 auto;
   padding: 0 3.2rem;
+  margin-bottom: 3rem;
 }
 
 .landingpg {
@@ -27,13 +27,15 @@ body {
   grid-template-columns: 1fr 1fr;
   gap: 4rem;
   align-items: center;
+
 }
 
 .landingpg-img {
   border-radius: 10px;
   width: 100%;
-  margin-top: 2rem;
+  margin-top: 3rem;
   height: auto;
+  margin-bottom: 3rem;
 }
 
 .about-img img {
@@ -193,7 +195,6 @@ body {
   font-size: 18px;
   line-height: 1.8;
   letter-spacing: -0.5px;
-  margin-bottom: 2rem;
 }
 
 .daily-img,
@@ -201,7 +202,14 @@ body {
   width: 90%;
   height: auto;
   border-radius: 10px;
+
 }
+
+#plank-section {
+  margin-bottom: 4rem;
+}
+
+margin-bottom: 4rem;
 
 /* GALLERY STYLING */
 head {
